# Meshroom

./: .bandit  .clang-format  .codecov.yml  .coverage  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  Dockerfile  Dockerfile_deps  Dockerfile_py2  HIGH_DPI_IMPLEMENTATION.md  INSTALL.md  INSTALL_PLUGINS.md  Makefile  README.md  RELEASING.md  appveyor.yml  compute.py  config.yml  configure  coverage.xml  dev_requirements.txt  format_all_files.sh  junit.xml  newNodeType.py  requirements-headless.txt  requirements.txt  setup-headless.py  setup.py  setupInitScriptUnix.py  setupInitScriptWindows.py  sfm.mg  start.bat  (+2 more)
dependencies/qml_modules/DarkStyle/: ApplicationWindow.qml  CMakeLists.txt  CheckBox.qml  ComboBox.qml  Globals.qml  Label.qml  MenuItem.qml  RadioButton.qml  ScrollBar.qml  Style.qml  TabButton.qml  ToolButton.qml  qmldir
dependencies/qml_modules/DarkStyle/Controls/: ApplicationWindow.qml  Button.qml  CheckBox.qml  ComboBox.qml  DarkStyleGallery.qml  DropArea.qml  Menu.qml  MenuBar.qml  ProgressBar.qml  Slider.qml  StackView.qml  TabView.qml  Text.qml  TextField.qml  ToolButton.qml  qmldir
dependencies/qml_modules/DarkStyle/Dialogs/: Dialog.qml
dependencies/qml_modules/DarkStyle/controls/: ApplicationWindow.qml  Button.qml  ComboBox.qml  RadioButton.qml  ScrollView.qml  Slider.qml  SplitView.qml  TabView.qml  TextField.qml  ToolButton.qml  qmldir
dependencies/qml_modules/DarkStyle/dialogs/: Dialog.qml  qmldir
dependencies/qml_modules/Logger/: CMakeLists.txt  Log.hpp  LogBar.qml  LogModel.cpp  LogModel.hpp  Singleton.hpp  plugin.hpp
dependencies/qml_modules/Qt3DAlembicEntity/: AlembicEntity.cpp  AlembicEntity.hpp  CMakeLists.txt  plugin.hpp  qmldir
plugins/: CMakeLists.txt  PluginInterface.hpp
plugins/cpp/: PluginToolBox.hpp
plugins/cpp/dummy/: CMakeLists.txt  plugin.json
plugins/cpp/openmvg/: BaseNode.cpp  BaseNode.hpp  CMakeLists.txt  plugin.hpp  plugin.json
plugins/cpp/theia/: CMakeLists.txt
plugins/dummy/: CMakeLists.txt  DummyPlugin.hpp  plugin.hpp  plugin.json
plugins/dummy/nodes/: DummyNode.cpp  DummyNode.hpp
plugins/openmvg/: CMakeLists.txt  plugin.hpp
plugins/openmvg/nodes/: AlembicExport.cpp  AlembicExport.hpp  ExifExtraction.cpp  ImageListing.cpp  Voctree.cpp
plugins/sample/: CMakeLists.txt  SamplePlugin.hpp
plugins/theia/: CMakeLists.txt  TheiaPlugin.hpp  plugin.hpp  plugin.json
plugins/theia/nodes/: ExifExtraction.cpp  FeatureExtraction.cpp  FeatureMatching.cpp  FeatureMatching.hpp  ImageListing.cpp  PlyExport.cpp  StructureFromMotion.cpp  VocTree.cpp  VocTree.hpp
src/: Application.cpp  Application.hpp  CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  InstantCoding.cpp  InstantCoding.hpp  Shortcut.cpp  Shortcut.hpp  WorkerThread.cpp  WorkerThread.hpp  main.cpp
src/cpp/: Actions.hpp  Application.cpp  Application.hpp  CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  Commands.hpp  Graph.cpp  Graph.hpp  InstantCoding.hpp  PluginNode.hpp  PluginNodeCollection.hpp  QQmlObjectListModel.hpp  Scene.cpp  Scene.hpp  Settings.hpp  Template.cpp  Template.hpp  TemplateCollection.cpp  TemplateCollection.hpp  UndoStack.cpp  UndoStack.hpp  Worker.cpp  Worker.hpp  WorkerThread.cpp  WorkerThread.hpp  main.cpp
src/gl/: GLAligner.cpp  GLAligner.hpp  GLCamera.cpp  GLCamera.hpp  GLDrawable.cpp  GLDrawable.hpp  GLGizmo.cpp  GLGizmo.hpp  GLGrid.cpp  GLGrid.hpp  GLPointCloud.cpp  GLPointCloud.hpp  GLRenderer.cpp  GLRenderer.hpp  GLSLBackgroundShader.cpp  GLSLBackgroundShader.hpp  GLSLColoredShader.cpp  GLSLColoredShader.hpp  GLSLPlainColorShader.cpp  GLSLPlainColorShader.hpp  GLScene.hpp  GLView.cpp  GLView.hpp
src/io/: AlembicImport.cpp  AlembicImport.hpp  JobsIO.cpp  JobsIO.hpp  ProjectsIO.cpp  ProjectsIO.hpp  SettingsIO.cpp  SettingsIO.hpp
src/models/: ApplicationModel.cpp  ApplicationModel.hpp  Attribute.cpp  Attribute.hpp  AttributeModel.cpp  AttributeModel.hpp  Camera.cpp  Camera.hpp  CameraModel.cpp  CameraModel.hpp  Graph.cpp  Graph.hpp  Job.cpp  Job.hpp  JobModel.cpp  JobModel.hpp  Log.cpp  Log.hpp  LogModel.cpp  LogModel.hpp  Node.cpp  Node.hpp  NodeCollection.cpp  NodeCollection.hpp  Plugin.cpp  Plugin.hpp  PluginCollection.cpp  PluginCollection.hpp  PluginNode.cpp  PluginNodeCollection.cpp  Project.cpp  Project.hpp  ProjectModel.cpp  ProjectModel.hpp  Resource.cpp  Resource.hpp  ResourceModel.cpp  ResourceModel.hpp  Scene.cpp  Scene.hpp  (+6 more)
src/qml/: ApplicationConnections.qml  ApplicationDialogs.qml  ApplicationLayout.qml  ApplicationMenu.qml  ApplicationMenus.qml  ApplicationModels.qml  ApplicationSettings.qml  CMakeLists.txt  Graph.qml  GraphsList.qml  Header.qml  HomePage.qml  IndexPage.qml  JobPage.qml  MenuPage.qml  ProjectPage.qml  Settings.qml  TemplateManager.qml  View2D.qml  View3D.qml  main.qml  main_debug.qml  resources.qrc
src/qml/components/: CustomComboBox.qml  CustomScrollView.qml  CustomSlider.qml  CustomTableView.qml  CustomText.qml  CustomTextField.qml  CustomToolButton.qml  CustomWrappedText.qml  DefaultBackground.qml  JobSettingsForm.qml  LogBar.qml  ResourceDropArea.qml  ResourceGallery.qml
src/qml/content/: Graph.qml  Header.qml  Settings.qml  View2D.qml  View3D.qml
src/qml/controls/: CustomSplitView.qml  MenuItemShortcut.qml  PathField.qml  SidePanel.qml  SplitView.qml
src/qml/delegates/: ControlDelegate.qml  FeaturedProjectDelegate.qml  ImageDelegate.qml  JobDelegate.qml  JobListDelegate.qml  ProjectDelegate.qml  ResourceGridDelegate.qml  SceneDelegate.qml  StepDelegate.qml  UrlDelegate.qml
src/qml/forms/: JobSettingsForm.qml  ProjectSettingsForm.qml
src/qml/headers/: BreadcrumbHeader.qml  HomeHeader.qml  JobHeader.qml  MenuHeader.qml  OverviewHeader.qml  ProjectHeader.qml
src/qml/layouts/: SplittedPageLayout.qml  TitledPageLayout.qml
src/qml/pages/: HomePage.qml  IndexPage.qml  JobPage.qml  MainPage.qml  MenuPage.qml  NewJobPage.qml  NewProjectPage.qml  OverviewPage.qml  ProjectPage.qml  TestPage.qml
src/qml/styles/: DefaultStyle.qml  qmldir
src/util/: Shortcut.hpp
(+758 files in other folders)
